--- a/html/popup.css
+++ b/html/popup.css
@@ -65,7 +65,7 @@ label {
     width: 80%;
     margin: 0px;
     padding: 10px;
-    font-style:italic;
+    text-align: center;
     border-radius: 5px;
     background-color: hsl(60,100%,75%);
     box-shadow:0 0 20px black;
