Revert 'release' branch to version 0.4.5
This reverts commit 89dc3ca79299bf6020810841a3565946ee0ba203.

--- a/css/options.css
+++ b/css/options.css
@@ -4,24 +4,15 @@
 div {
     position: relative;
     overflow: auto;
-    width: 450px;
-    max-width: 100%;
+    width: 300px;
     margin: 0px auto;
 }
 button {
     text-align: center;
     display: block;
     float: left;
-    width: 45%;
-    margin: 10px 2.5%;
-}
-button:first-child:last-child {
-    width: 95%;
-}
-label {
-    display: block;
-    width: 95%;
-    margin: 10px 2.5%;
+    width: 130px;
+    margin: 10px;
 }
 #status {
     width: 400px;
