--- a/css/options.css
+++ b/css/options.css
@@ -1,6 +1,11 @@
 .hidden {
     display: none;
 }
+body {
+    font-family: sans-serif;
+    font-size: 15px;
+    color: black;
+}
 div {
     position: relative;
     overflow: auto;
