--- a/css/popup.css
+++ b/css/popup.css
@@ -8,9 +8,9 @@ html {
 body {
     margin: 0px;
     font-family: sans-serif;
-    font-size: 15px;
+    font-size: 16px;
     color: black;
-    width: 540px;
+    width: 570px;
     max-width: 100%;
 }
 .roundrect {
@@ -24,8 +24,9 @@ body {
 }
 .roundrect h3 {
     position: relative;
+    font-size: 20px;
     text-align: center;
-    transform: translateY(-50%);
+    transform: translateY(-13px);
     margin: 0px auto;
 }
 .roundrect h3 span {
@@ -67,29 +68,30 @@ label {
     padding: 8px;
 }
 label > span {
-    font-size: .7em;
-    color: hsl(0,0%,45%);
+    font-size: 11px;
+    color: hsl(0,0%,50%);
 }
 label > span.error {
-    color: red;
+    color: hsl(0,100%,60%);
 }
 .mail {
     margin: 10px 15px;
     border: solid 1px black;
 }
 .mail p, #details p {
-    font-size: .85em;
+    font-size: 13.5px;
     padding: 10px;
     margin: 0px;
 }
 
 /* MAIL DETAILS */
 #details h4 {
-    color: hsl(0,0%,20%);
-    font-size: 1.2em;
+    color: hsl(0,0%,25%);
+    font-size: 20px;
     text-align: center;
 }
 #headers, #fulltext {
+    word-wrap: break-word;
     white-space: pre-wrap;
 }
 
