--- a/css/popup.css
+++ b/css/popup.css
@@ -7,7 +7,7 @@ html {
     background-color: hsl(0,0%,92%);
 }
 body {
-    margin: 0px;
+    margin: 0px auto;
     font-family: sans-serif;
     font-size: 16px;
     width: 570px;
